updated for 2.4.0. Fixed link to GAP and changed the pointer to the
2007-10-24  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for 2.4.0. Fixed link to GAP 
and
	changed the pointer to the development version.


svn path=/branches/v2.4/; revision=1671

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -20,13 +20,13 @@
 	</tr>
 	<tr>
 		<td>gimp-2.4.0.tar.bz2</td>
-		<td><kbd><b>eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeek</kbd></td>
+		<td><kbd><b>35fecf14cd5237065aef624b93030d5e</kbd></td>
 	</tr>
 	</table>
 	</p>
 
-	<p>GAP (the GIMP Animation Package) for 2.4 is available at
-	<a href="ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.4/gap">ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.2/gap</a>.
+	<p>GAP (the GIMP Animation Package) for GIMP 2.2 and above is available at
+	<a href="ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.2/gap">ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.2/gap</a>.
 	</p>
 
 	<p>GIMP help files are available at
@@ -38,13 +38,22 @@
 
 	<h2>Development version</h2>
 
+	<p>
+	There's currently no released development snapshot.
+	</p>
+
+<!--
+
 	<p>GIMP 2.5.0 is a snapshot of current development towards GIMP 2.6. The
 	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.5/">ftp://ftp.gimp.org/pub/gimp/v2.5/</a>. Please make sure you read the <a href="/release-notes/gimp-2.5.html">Release Notes for GIMP 2.5</a>.
 	</p>
 
+-->
+
 	<p>A detailed list of changes in the development branch is available
 	at <a href="http://developer.gimp.org/NEWS">developer.gimp.org</a>.
 	</p>
+
 	
 	<h1><a name="mirrors"></a>FTP and Web Mirrors</h1>
 	<!--#include virtual="/downloads/mirrors.xhtml" -->
