remove some misinformation
2007-10-24  Jakub Steiner <jimmac@ximian.com>

* downloads/Windows.xhtml: remove some misinformation

svn path=/branches/v2.4/; revision=1677

--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -5,15 +5,6 @@ however, install GIMP easily using the <a
 href="http://gimp-win.sourceforge.net/">windows installers by Jernej
 Simoncic</a>.</p>
 
-<p>To install GIMP on windows, you first need to make sure you have the latest gtk+ libraries installed. If not, use one of the following installers:</p>
-
 <ul>
-<li id="gtk210win"><a href="http://downloads.sourceforge.net/gimp-win/gtk%2B-2.10.13-setup.exe">GTK+ 2.10 Runtime</a> &ndash; for Windows Vista, XP and 2000</li>
-<li id="gtk206win"><a href="http://downloads.sourceforge.net/gimp-win/gtk%2B-2.6.10-20050823-setup.zip">GTK+ 2.6 Runtime</a> &ndash; for Windows 98, ME or NT4</li>
-</ul>
-
-<p>Once gtk+ is properly installed, you can run the following GIMP installer and enjoy the power of free image editing.</p>
-
-<ul>
-<li><a href="#">GIMP 2.4</a> &ndash; for WIndows 98 and above (FIXME)</li>
+<li><a href="#">GIMP 2.4</a> &ndash; for Windows 98 and above (FIXME: Not ready yet, please be patient)</li>
 </ul>
