--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -11,8 +11,8 @@
 	Notes for GIMP 2.4</a>.
 	</p>
 
-	<p> To allow you to check the integrity of the tarballs, here are the
-	MD5 sum of the latest released tarballs:
+	<p>To allow you to check the integrity of the tarball, here is the
+	MD5 sum of the latest release:
 	<table>
 	<tr>
 		<th>File</th>
