--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -2,9 +2,9 @@
 
 <p>The GIMP team doesn't officially provide any Windows binaries. You can,
 however, install GIMP easily using the <a
-href="http://gimp-win.sourceforge.net/">windows installers by Jernej
+href="http://gimp-win.sourceforge.net/">Windows installers by Jernej
 Simoncic</a>.</p>
 
 <ul>
-<li><a href="#">GIMP 2.4</a> &ndash; for Windows 98 and above (FIXME: Not ready yet, please be patient)</li>
+<li><a href="http://gimp-win.sourceforge.net/stable.html">GIMP 2.4</a> - for Windows 2000 and above</li>
 </ul>
