--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -3,7 +3,7 @@
 <p>The GIMP team doesn't officially provide any Windows binaries. You can,
 however, install GIMP easily using the <a
 href="http://gimp-win.sourceforge.net/">Windows installers by Jernej
-Simoncic</a>.</p>
+Simončič</a>.</p>
 
 <ul>
 <li><a href="http://gimp-win.sourceforge.net/stable.html">GIMP 2.4</a> - for Windows 2000 and above</li>
