added warning about release candidates, until the 2.4.0 binaries are
2007-10-24  Raphael Quinet  <raphael@gimp.org>

	* downloads/Mac.xhtml: added warning about release candidates,
	until the 2.4.0 binaries are available.

svn path=/branches/v2.4/; revision=1696

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -1,10 +1,12 @@
 <h2>GIMP for Mac OS X</h2>
 
+<p><em class="warn">The official release of GIMP 2.4 is not available yet for Mac OS X.  The links to the binaries included below are usually for the slightly older release candidates.  We hope that they will be updated soon.</em></p>
+
 <p>The GIMP team doesn't provide official Mac binaries. You can, however,
 install GIMP 2.4 easily on the Mac using the <a
 href="http://prdownloads.sourceforge.net/gimp-app/GIMP-2.4-rc3-intel.dmg">Intel binary</a> provided by the <a href="http://gimp-app.sourceforge.net/">gimp.app project</a>.</p>
 
-<p>Running GIMP on the Mac OS X requires Apple's X11 environment. It is
+<p>Running GIMP on Mac OS X requires Apple's X11 environment. It is
 included on the <em>"Optional Installs"</em> package on the OS X install
 disk.</p>
 
