--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -5,14 +5,14 @@
 	compiled in order to be installed on your system.
 	</p>
 	
-	<p>GIMP 2.4.0 is now available
+	<p>GIMP 2.4.1 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.4/">ftp://ftp.gimp.org/pub/gimp/v2.4/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.4.html">Release
 	Notes for GIMP 2.4</a>.
 	</p>
 
-	<p>To allow you to check the integrity of the tarball, here is the
-	MD5 sum of the latest release:
+	<p>To allow you to check the integrity of the tarballs, here are the
+	MD5 sums of the latest releases:
 	<table>
 	<tr>
 		<th>File</th>
@@ -21,6 +21,10 @@
 	<tr>
 		<td>gimp-2.4.0.tar.bz2</td>
 		<td><kbd><b>35fecf14cd5237065aef624b93030d5e</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.4.1.tar.bz2</td>
+		<td><kbd><b>51edbadd77235837535a6882ad63d8fb</kbd></td>
 	</tr>
 	</table>
 	</p>
