--- a/about/splash/stable.html
+++ b/about/splash/stable.html
@@ -46,5 +46,7 @@
 
 
 
+<!--#include virtual="/includes/image-license.inc" -->
+
 <!--#include virtual="/includes/wgo-page-fini.xhtml" -->
 <!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
