removed bold tag from MD5 sums.
2007-11-15  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: removed bold tag from MD5 sums.


svn path=/trunk/; revision=1724

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -1,6 +1,6 @@
 	<h2>Source for version 2.4 (Stable)</h2>
 
-	<p>The GIMP releases available from gimp.org and its
+	<p>GIMP releases available from gimp.org and its
 	<a href="#mirrors">mirrors</a> contain the source code and have to be
 	compiled in order to be installed on your system.
 	</p>
@@ -20,11 +20,11 @@
 	</tr>
 	<tr>
 		<td>gimp-2.4.0.tar.bz2</td>
-		<td><kbd><b>35fecf14cd5237065aef624b93030d5e</kbd></td>
+		<td><kbd>35fecf14cd5237065aef624b93030d5e</kbd></td>
 	</tr>
 	<tr>
 		<td>gimp-2.4.1.tar.bz2</td>
-		<td><kbd><b>51edbadd77235837535a6882ad63d8fb</kbd></td>
+		<td><kbd>51edbadd77235837535a6882ad63d8fb</kbd></td>
 	</tr>
 	</table>
 	</p>
