downloads/Mac.xhtml removed some cruft, link to the "Wilber loves Apple"
2007-11-20  Sven Neumann  <sven@gimp.org>

	* downloads/Mac.xhtml
	* macintosh/index.htrw: removed some cruft, link to the "Wilber
	loves Apple" website as the primary source for binary packages.


svn path=/trunk/; revision=1725

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -1,31 +1,31 @@
 <h2>GIMP for Mac OS X</h2>
 
-<p><em class="warn">The official release of GIMP 2.4 is not available yet for Mac OS X.  The links to the binaries included below are usually for the slightly older release candidates.  We hope that they will be updated soon.</em></p>
+<p>
+The GIMP team doesn't provide official Mac binaries. You can, however,
+install GIMP 2.4 easily on the Mac using the packages provided by the
+<a href="http://wilber-loves-apple.org/">Wilber loves Apple</a> community.
+</p>
 
-<p>The GIMP team doesn't provide official Mac binaries. You can, however,
-install GIMP 2.4 easily on the Mac using the <a
-href="http://prdownloads.sourceforge.net/gimp-app/GIMP-2.4-rc3-intel.dmg?download">Intel binary</a> provided by the <a href="http://gimp-app.sourceforge.net/">gimp.app project</a>.</p>
-
-<p>Running GIMP on Mac OS X requires Apple's X11 environment. It is
-included on the <em>"Optional Installs"</em> package on the OS X install
-disk.</p>
+<p>
+Running GIMP on Mac OS X requires Apple's X11 environment. It is
+included on the <em>"Optional Installs"</em> package on the OS X
+install disk.
+</p>
 
 <ul>
-<li><a href="http://prdownloads.sourceforge.net/gimp-app/GIMP-2.4-rc3-intel.dmg?download">Download Gimp.app 2.4-rc3</a> &ndash; Intel binary for Mac OS X 10.3 and above</li>
-<li><a href="http://prdownloads.sourceforge.net/gimp-app/Gimp-2.2.11.dmg?download">Download Gimp.app 2.2.11</a> &ndash; universal binary for Mac OS X 10.3 and above</li>
+<li><a href="http://www.nasendackel.de/download/gimp/Gimp-2.4.1-Leopard.dmg.zip">Download GIMP 2.4.1</a> &ndash; Intel binary for Mac OS X 10.5 Leopard</li>
+<li><a href="http://www.nasendackel.de/download/gimp/Gimp-2.4.1-PPC-Leopard.dmg.zip"Download GIMP 2.4.1</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
 </ul>
 
-<h3>Fink &amp; Macports</h3>
+<h3>Macports</h3>
 
 <p>Another easy way to install GIMP and other great <a
-href="http://www.gnu.org/philosophy/free-sw.html">Free software</a> on your mac
-is downloading either <a href="http://fink.sf.net">Fink</a> or <a
-href="http://www.macports.org/">Macports</a>. The installers then allow you to
-choose from a large directory of packages. To install gimp using fink, you
-simply do <code>sudo apt-get install gimp</code> once you have Fink installed.
-Similarly on Macports you do <code>sudo port install gimp</code>.</p>
+href="http://www.gnu.org/philosophy/free-sw.html">Free software</a> on your Mac
+is by using <a href="http://www.macports.org/">Macports</a>. The installer
+then allow you to choose from a large directory of packages. To install gimp
+using Macports, you simply do <code>sudo port install gimp</code> once you have
+Macports installed.
 
 <ul>
 <li><a href="http://macports.org">Download Macports</a>.</li>
-<li><a href="http://fink.sf.net">Download Fink</a>.</li>
 </ul>
