about/history.htrw updated for GIMP 2.4.2 release.
2007-11-21  Sven Neumann  <sven@gimp.org>

	* about/history.htrw
	* downloads/source.xhtml: updated for GIMP 2.4.2 release.


svn path=/trunk/; revision=1726

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -26,6 +26,10 @@
 		<td>gimp-2.4.1.tar.bz2</td>
 		<td><kbd>51edbadd77235837535a6882ad63d8fb</kbd></td>
 	</tr>
+	<tr>
+		<td>gimp-2.4.2.tar.bz2</td>
+		<td><kbd>ebd8902d29753d41c8d51a3efd84d1bf</kbd></td>
+	</tr>
 	</table>
 	</p>
 
