--- a/downloads/Linux.xhtml
+++ b/downloads/Linux.xhtml
@@ -17,3 +17,7 @@ get the latest stable release of GIMP.</p>
 <h3>Fedora</h3>
 <p>Similarly to the above, Fedora users can install the latest stable GIMP by
 running <code>yum install gimp</code>.</p>
+
+<h3>Mandriva</h3>
+<p>Mandriva Linux users can install the latest stable GIMP by running
+<code>urpmi gimp</code>.</p>
