--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -15,7 +15,7 @@ install disk.
 <ul>
 <li><a href="http://www.nasendackel.de/download/gimp/Gimp_2.4.2_Intel_Leopard.dmg.zip">Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.5 Leopard</li>
 <li><a href="http://www.nasendackel.de/download/gimp/Gimp-2.4.1-PPC-Leopard.dmg.zip"Download GIMP 2.4.1</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
-<li><a href="http://www.nasendackel.de/download/gimp/kl3ks/GIMP_2.4.1_Tiger.dmg.zip"Download GIMP 2.4.1</a> &ndash; Intel binary for Mac OS X 10.4 Tiger</li>
+<li><a href="http://www.nasendackel.de/download/gimp/kl3ks/GIMP_2.4.2_Tiger_Intel.dmg.zip"Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.4 Tiger</li>
 </ul>
 
 <h3>Macports</h3>
