changed download links to point to wilber-loves-apple.org.
2007-11-23  Sven Neumann  <sven@gimp.org>

	* downloads/Mac.xhtml: changed download links to point to
	wilber-loves-apple.org.


svn path=/trunk/; revision=1735

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -13,9 +13,9 @@ install disk.
 </p>
 
 <ul>
-<li><a href="http://www.nasendackel.de/download/gimp/Gimp_2.4.2_Intel_Leopard.dmg.zip">Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.5 Leopard</li>
-<li><a href="http://www.nasendackel.de/download/gimp/Gimp-2.4.1-PPC-Leopard.dmg.zip"Download GIMP 2.4.1</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
-<li><a href="http://www.nasendackel.de/download/gimp/kl3ks/GIMP_2.4.2_Tiger_Intel.dmg.zip"Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.4 Tiger</li>
+<li><a href="http://www.wilber-loves-apple.org/download/gimp/Gimp_2.4.2_Intel_Leopard.dmg.zip">Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.5 Leopard</li>
+<li><a href="http://www.wilber-loves-apple.org/download/gimp/Gimp-2.4.1-PPC-Leopard.dmg.zip"Download GIMP 2.4.1</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
+<li><a href="http://www.wilber-loves-apple.org/download/gimp/kl3ks/GIMP_2.4.2_Tiger_Intel.dmg.zip"Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.4 Tiger</li>
 </ul>
 
 <h3>Macports</h3>
