--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -13,9 +13,9 @@ install disk.
 </p>
 
 <ul>
-<li><a href="http://www.wilber-loves-apple.org/download/gimp/Gimp_2.4.2_Intel_Leopard.dmg.zip">Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.5 Leopard</li>
-<li><a href="http://www.wilber-loves-apple.org/download/gimp/Gimp-2.4.1-PPC-Leopard.dmg.zip"Download GIMP 2.4.1</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
-<li><a href="http://www.wilber-loves-apple.org/download/gimp/kl3ks/GIMP_2.4.2_Tiger_Intel.dmg.zip"Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.4 Tiger</li>
+<li><a href="http://downloads.sourceforge.net/darwingimp/GIMP-2.4.2-Leopard-Intel.dmg">Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.5 Leopard</li>
+<li><a href="http://downloads.sourceforge.net/darwingimp/GIMP-2.4.1-Leopard-PPC.dmg"Download GIMP 2.4.1</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
+<li><a href="http://downloads.sourceforge.net/darwingimp/Gimp-2.4.2a-Tiger-Intel.dmg"Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.4 Tiger</li>
 </ul>
 
 <h3>Macports</h3>
