updated download link for PowerPC Leopard.
2007-11-26  Sven Neumann  <sven@gimp.org>

	* downloads/Mac.xhtml: updated download link for PowerPC Leopard.

svn path=/trunk/; revision=1737

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -14,7 +14,7 @@ install disk.
 
 <ul>
 <li><a href="http://downloads.sourceforge.net/darwingimp/GIMP-2.4.2-Leopard-Intel.dmg">Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.5 Leopard</li>
-<li><a href="http://downloads.sourceforge.net/darwingimp/GIMP-2.4.1-Leopard-PPC.dmg"Download GIMP 2.4.1</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
+<li><a href="http://downloads.sourceforge.net/darwingimp/Gimp-2.4.2-Leopard-PPC.dmg"Download GIMP 2.4.2</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
 <li><a href="http://downloads.sourceforge.net/darwingimp/Gimp-2.4.2a-Tiger-Intel.dmg"Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.4 Tiger</li>
 </ul>
 
