point to the Download page at wilber-loves-apple.org; they are changing
2007-11-29  Sven Neumann  <sven@gimp.org>

	* downloads/Mac.xhtml: point to the Download page at
	wilber-loves-apple.org; they are changing the binaries too often
	to keep track.


svn path=/trunk/; revision=1741

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -6,17 +6,15 @@ install GIMP 2.4 easily on the Mac using the packages provided by the
 <a href="http://wilber-loves-apple.org/">Wilber loves Apple</a> community.
 </p>
 
+<ul>
+<li><a href="http://wilber-loves-apple.org/pages/download.html">Download GIMP 2.4.2</a> &ndash; Choose a package from the Downloads page</li>
+</ul>
+
 <p>
 Running GIMP on Mac OS X requires Apple's X11 environment. It is
 included on the <em>"Optional Installs"</em> package on the OS X
 install disk.
 </p>
-
-<ul>
-<li><a href="http://downloads.sourceforge.net/darwingimp/GIMP-2.4.2-Leopard-Intel.dmg">Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.5 Leopard</li>
-<li><a href="http://downloads.sourceforge.net/darwingimp/Gimp-2.4.2-Leopard-PPC.dmg"Download GIMP 2.4.2</a> &ndash; PowerPC binary for Mac OS X 10.5 Leopard</li>
-<li><a href="http://downloads.sourceforge.net/darwingimp/Gimp-2.4.2a-Tiger-Intel.dmg"Download GIMP 2.4.2</a> &ndash; Intel binary for Mac OS X 10.4 Tiger</li>
-</ul>
 
 <h3>Macports</h3>
 
