--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -6,5 +6,5 @@ href="http://gimp-win.sourceforge.net/">Windows installers by Jernej
 Simončič</a>.</p>
 
 <ul>
-<li><a href="http://downloads.sourceforge.net/gimp-win/gimp-2.4.2-i686-setup.exe">Download GIMP 2.4.2</a> &ndash; Installer for Windows 2000 and above</li>
+<li><a href="http://downloads.sourceforge.net/gimp-win/gimp-2.4.3-i686-setup-1.exe">Download GIMP 2.4.3</a> &ndash; Installer for Windows 2000 and above</li>
 </ul>
