--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -37,8 +37,8 @@
 	</table>
 	</p>
 
-	<p>GAP (the GIMP Animation Package) for GIMP 2.2 and above is available at
-	<a href="ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.2/gap">ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.2/gap</a>.
+	<p>GAP (the GIMP Animation Package) for GIMP 2.4 is available at
+	<a href="ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.4/gap">ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.4/gap</a>.
 	</p>
 
 	<p>GIMP help files are available at
