--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -5,7 +5,7 @@
 	compiled in order to be installed on your system.
 	</p>
 	
-	<p>GIMP 2.4.3 is now available
+	<p>GIMP 2.4.4 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.4/">ftp://ftp.gimp.org/pub/gimp/v2.4/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.4.html">Release
 	Notes for GIMP 2.4</a>.
@@ -33,6 +33,10 @@
 	<tr>
 		<td>gimp-2.4.3.tar.bz2</td>
 		<td><kbd>958988ac02642e2dfda7ad7d045e2a84</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.4.4.tar.bz2</td>
+		<td><kbd>41d0568581de99f3fd2ecb5babae1f6e</kbd></td>
 	</tr>
 	</table>
 	</p>
