--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -3,11 +3,11 @@
 <p>
 The GIMP team doesn't provide official Mac binaries. You can, however,
 install GIMP 2.4 easily on the Mac using the packages provided by the
-<a href="http://wilber-loves-apple.org/">Wilber loves Apple</a> community.
+<a href="http://darwingimp.sourceforge.net/">Wilber loves Apple</a> community.
 </p>
 
 <ul>
-<li><a href="http://wilber-loves-apple.org/pages/download.html">Download GIMP 2.4.2</a> &ndash; Choose a package from the Downloads page</li>
+<li><a href="http://darwingimp.sourceforge.net/download.html">Download GIMP 2.4</a> &ndash; Choose a package from the Downloads page</li>
 </ul>
 
 <p>
