updated for GIMP 2.5.0 release.
2008-04-09  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.5.0 release.


svn path=/trunk/; revision=1777

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -56,19 +56,26 @@
 	<p>Please consider using one of the mirrors listed below.</p>
 
 
-	<h2>Development version</h2>
-
-	<p>
-	There's currently no released development snapshot.
-	</p>
-
-<!--
+	<h2>Development snapshots</h2>
 
 	<p>GIMP 2.5.0 is a snapshot of current development towards GIMP 2.6. The
 	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.5/">ftp://ftp.gimp.org/pub/gimp/v2.5/</a>. Please make sure you read the <a href="/release-notes/gimp-2.5.html">Release Notes for GIMP 2.5</a>.
 	</p>
 
--->
+	<p>To allow you to check the integrity of the tarballs, here are the
+	MD5 sums of the latest releases:
+	<table>
+	<tr>
+		<th>File</th>
+		<th>MD5 sum</th>
+	</tr>
+	<tr>
+		<td>gimp-2.5.0.tar.bz2</td>
+		<td><kbd>8ba5d24c700b495e8a9f32743369c925</kbd></td>
+	</tr>
+	</tr>
+	</table>
+	</p>
 
 	<p>A detailed list of changes in the development branch is available
 	at <a href="http://developer.gimp.org/NEWS">developer.gimp.org</a>.
