updated for GIMP 2.5.1 release.
2008-06-15  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.5.1 release.


svn path=/trunk/; revision=1787

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -62,7 +62,7 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>GIMP 2.5.0 is a snapshot of current development towards GIMP 2.6. The
+	<p>GIMP 2.5.1 is a snapshot of current development towards GIMP 2.6. The
 	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.5/">ftp://ftp.gimp.org/pub/gimp/v2.5/</a>. Please make sure you read the <a href="/release-notes/gimp-2.5.html">Release Notes for GIMP 2.5</a>.
 	</p>
 
@@ -77,6 +77,9 @@
 		<td>gimp-2.5.0.tar.bz2</td>
 		<td><kbd>8ba5d24c700b495e8a9f32743369c925</kbd></td>
 	</tr>
+	<tr>
+		<td>gimp-2.5.1.tar.bz2</td>
+		<td><kbd>da2a6ffd8ed5e137d34784ef3fba9a04</kbd></td>
 	</tr>
 	</table>
 	</p>
