updated for GIMP 2.5.2 release.
2008-07-16  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.5.2 release.


svn path=/trunk/; revision=1788

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -62,7 +62,7 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>GIMP 2.5.1 is a snapshot of current development towards GIMP 2.6. The
+	<p>GIMP 2.5.2 is a snapshot of current development towards GIMP 2.6. The
 	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.5/">ftp://ftp.gimp.org/pub/gimp/v2.5/</a>. Please make sure you read the <a href="/release-notes/gimp-2.5.html">Release Notes for GIMP 2.5</a>.
 	</p>
 
@@ -80,6 +80,10 @@
 	<tr>
 		<td>gimp-2.5.1.tar.bz2</td>
 		<td><kbd>da2a6ffd8ed5e137d34784ef3fba9a04</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.5.2.tar.bz2</td>
+		<td><kbd>98add4a1ca6af2e20f80ae3f5a84a922</kbd></td>
 	</tr>
 	</table>
 	</p>
