--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -5,7 +5,7 @@
 	compiled in order to be installed on your system.
 	</p>
 	
-	<p>GIMP 2.4.6 is now available
+	<p>GIMP 2.4.7 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.4/">ftp://ftp.gimp.org/pub/gimp/v2.4/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.4.html">Release
 	Notes for GIMP 2.4</a>.
@@ -45,6 +45,10 @@
 	<tr>
 		<td>gimp-2.4.6.tar.bz2</td>
   		<td><kbd>a0bd1560f81f15c23ed4c0c6cb9c4b59</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.4.7.tar.bz2</td>
+  		<td><kbd>8d0e059597d70fbdeb77e6447bae29c4</kbd></td>
 	</tr>
 	</table>
 	</p>
