updated for GIMP 2.5.4 release.
2008-09-16  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.5.4 release.


svn path=/trunk/; revision=1803

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -66,7 +66,7 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>GIMP 2.5.3 is a snapshot of current development towards GIMP 2.6. The
+	<p>GIMP 2.5.4 is a snapshot of current development towards GIMP 2.6. The
 	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.5/">ftp://ftp.gimp.org/pub/gimp/v2.5/</a>. Please make sure you read the <a href="/release-notes/gimp-2.5.html">Release Notes for GIMP 2.5</a>.
 	</p>
 
@@ -92,6 +92,10 @@
 	<tr>
 		<td>gimp-2.5.3.tar.bz2</td>
 		<td><kbd>35a282a646520ce2a2e01c70a23e79c3</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.5.4.tar.bz2</td>
+		<td><kbd>e9fd4b1083b0c01de19ec4c5a52a7c32</kbd></td>
 	</tr>
 	</table>
 	</p>
