updated for GIMP 2.6.1 release.
2008-10-09  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.6.1 release.


svn path=/trunk/; revision=1890

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -5,7 +5,7 @@
 	compiled in order to be installed on your system.
 	</p>
 	
-	<p>GIMP 2.6.0 is now available
+	<p>GIMP 2.6.1 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.6/">ftp://ftp.gimp.org/pub/gimp/v2.6/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.6.html">Release
 	Notes for GIMP 2.6</a>.
@@ -21,6 +21,10 @@
 	<tr>
 		<td>gimp-2.6.0.tar.bz2</td>
 		<td><kbd>e5ac955fee8b376d431e4693027d7640</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.6.1.tar.bz2</td>
+		<td><kbd>2fa176d1da75575c88b01019d014744d</kbd></td>
 	</tr>
 	</table>
 	</p>
