point to the GIMP 2.6 packages for Mac OS X at lisanet.de.
2008-10-18  Sven Neumann  <sven@gimp.org>

	* downloads/Mac.xhtml: point to the GIMP 2.6 packages for Mac OS 
X
	at lisanet.de.

	* macintosh/index.htrw: updated some links and remoted outdated
	links.


svn path=/trunk/; revision=1898

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -2,12 +2,12 @@
 
 <p>
 The GIMP team doesn't provide official Mac binaries. You can, however,
-install GIMP 2.4 easily on the Mac using the packages provided by the
-<a href="http://darwingimp.sourceforge.net/">Wilber loves Apple</a> community.
+install GIMP 2.6 easily on the Mac using the packages provided by
+<a href="http://gimp.lisanet.de/">GIMP on OS X</a>.
 </p>
 
 <ul>
-<li><a href="http://darwingimp.sourceforge.net/download.html">Download GIMP 2.4</a> &ndash; Choose a package from the Downloads page</li>
+<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.6</a> &ndash; Choose a package from the Downloads page</li>
 </ul>
 
 <p>
