--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -5,7 +5,7 @@
 	compiled in order to be installed on your system.
 	</p>
 	
-	<p>GIMP 2.6.1 is now available
+	<p>GIMP 2.6.2 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.6/">ftp://ftp.gimp.org/pub/gimp/v2.6/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.6.html">Release
 	Notes for GIMP 2.6</a>.
@@ -25,6 +25,10 @@
 	<tr>
 		<td>gimp-2.6.1.tar.bz2</td>
 		<td><kbd>2fa176d1da75575c88b01019d014744d</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.6.2.tar.bz2</td>
+		<td><kbd>3664d12f26447c0edc3f611987b9bf2d</kbd></td>
 	</tr>
 	</table>
 	</p>
