updated for GIMP 2.6.5 release.
2009-02-15  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.6.5 release.


svn path=/trunk/; revision=1918

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -5,7 +5,7 @@
 	compiled in order to be installed on your system.
 	</p>
 	
-	<p>GIMP 2.6.4 is now available
+	<p>GIMP 2.6.5 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.6/">ftp://ftp.gimp.org/pub/gimp/v2.6/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.6.html">Release
 	Notes for GIMP 2.6</a>.
@@ -37,6 +37,10 @@
 	<tr>
 		<td>gimp-2.6.4.tar.bz2</td>
 		<td><kbd>4e8185e40ab06559ce6dd5ef61b3e83b</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.6.5.tar.bz2</td>
+		<td><kbd>cd13050bc6bde6d8d8fd38eff6276033</kbd></td>
 	</tr>
 	</table>
 	</p>
