--- a/about/splash/stable.html
+++ b/about/splash/stable.html
@@ -1,19 +1,12 @@
 <!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Splash History</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
-<script type="text/javascript" src="/includes/iutil.js"></script>
-
-<script type="text/javascript" src="/includes/imagebox.js"></script>
+<!--#include virtual="/includes/imagebox.xhtml" -->
 <script type="text/javascript">
 	//image preview
 	//<!--
 	$(document).ready(function() {
-			$.ImageBox.init(
-				{
-					loaderSRC: '/images/loading.gif',
-					closeHTML: '<img src=\"/images/close.png\" alt=\"x\" />'
-				}
-			);
+
 			//replace the thumbnails with a crop view
 			$(".splashes img").each(function () {
 				//console.log("mangling thumbnail for " + this.id);
@@ -32,17 +25,17 @@
 <h1>Stable Version Splash History</h1>
 
 <div class="splashes">
-<a href="images/gimp1_1_splash.png" rel="imagebox-splash" title="GIMP 1.0<br /> Author: Jens Lautenbacher"><img alt="#"  id="gimp1_1_splash" src="images/gimp1_1_splash.png" width="128" height="128" /></a>
+<a href="images/gimp1_1_splash.png" title="GIMP 1.0<br /> Author: Jens Lautenbacher"><img alt="#"  id="gimp1_1_splash" src="images/gimp1_1_splash.png" width="128" height="128" /></a>
 
-<a href="images/gimp_splash.1.11.png" rel="imagebox-splash" title="GIMP 1.2<br /> Author: Tuomas Kuosmanen"><img alt="#"  id="gimp_splash.1.11" src="images/gimp_splash.1.11.png" width="128" height="128" /></a>
+<a href="images/gimp_splash.1.11.png"  title="GIMP 1.2<br /> Author: Tuomas Kuosmanen"><img alt="#"  id="gimp_splash.1.11" src="images/gimp_splash.1.11.png" width="128" height="128" /></a>
 
-<a href="images/gimp_splashpng.1.19.png" rel="imagebox-splash" title="GIMP 2.0<br /> Author: Jakub Steiner"><img alt="#"  id="gimp_splashpng.1.19" src="images/gimp_splashpng.1.19.png" width="128" height="128" /></a>
+<a href="images/gimp_splashpng.1.19.png"  title="GIMP 2.0<br /> Author: Jakub Steiner"><img alt="#"  id="gimp_splashpng.1.19" src="images/gimp_splashpng.1.19.png" width="128" height="128" /></a>
 
-<a href="images/gimp-splash-1.6.png" rel="imagebox-splash" title="GIMP 2.2<br /> Author: Bill Luhtala"><img alt="#"  id="gimp-splash-1.6" src="images/gimp-splash-1.6.png" width="128" height="128" /></a>
+<a href="images/gimp-splash-1.6.png" title="GIMP 2.2<br /> Author: Bill Luhtala"><img alt="#"  id="gimp-splash-1.6" src="images/gimp-splash-1.6.png" width="128" height="128" /></a>
 
-<a href="images/gimp-splash-2.4.png" rel="imagebox-splash" title="GIMP 2.4<br /> Author: Paul Davey"><img alt="#"  id="gimp-splash-2.4" src="images/gimp-splash-2.4.png" width="128" height="128" /></a>
+<a href="images/gimp-splash-2.4.png" title="GIMP 2.4<br /> Author: Paul Davey"><img alt="#"  id="gimp-splash-2.4" src="images/gimp-splash-2.4.png" width="128" height="128" /></a>
 
-<a href="images/gimp-splash-2.6.png" rel="imagebox-splash" title="GIMP 2.6<br /> Author: Alexia Death"><img alt="#"  id="gimp-splash-2.6" src="images/gimp-splash-2.6.png" width="128" height="128" /></a>
+<a href="images/gimp-splash-2.6.png" title="GIMP 2.6<br /> Author: Alexia Death"><img alt="#"  id="gimp-splash-2.6" src="images/gimp-splash-2.6.png" width="128" height="128" /></a>
 
 </div>
 
