--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -5,7 +5,7 @@
 	compiled in order to be installed on your system.
 	</p>
 	
-	<p>GIMP 2.6.5 is now available
+	<p>GIMP 2.6.6 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.6/">ftp://ftp.gimp.org/pub/gimp/v2.6/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.6.html">Release
 	Notes for GIMP 2.6</a>.
@@ -41,6 +41,10 @@
 	<tr>
 		<td>gimp-2.6.5.tar.bz2</td>
 		<td><kbd>cd13050bc6bde6d8d8fd38eff6276033</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.6.6.tar.bz2</td>
+		<td><kbd>23d880dd09cd62c936ed04666a53f8e4</kbd></td>
 	</tr>
 	</table>
 	</p>
