Added gimp-2.6.7.tar.bz2 and corresponding MD5 sum

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -46,6 +46,10 @@
 		<td>gimp-2.6.6.tar.bz2</td>
 		<td><kbd>23d880dd09cd62c936ed04666a53f8e4</kbd></td>
 	</tr>
+	<tr>
+		<td>gimp-2.6.7.tar.bz2</td>
+		<td><kbd>77ed86a8de9b48587efb24f2b115ad38</kbd></td>
+	</tr>
 	</table>
 	</p>
 
