--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -66,9 +66,6 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>There are no development releases yet.</p>
-
-<!--
 	<p>GIMP 2.7.0 is a snapshot of current development towards GIMP 2.8. The
 	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.7/">ftp://ftp.gimp.org/pub/gimp/v2.7/</a>. Please make sure you read the <a href="/release-notes/gimp-2.7.html">Release Notes for GIMP 2.7</a>.
 	</p>
@@ -82,17 +79,15 @@
 	</tr>
 	<tr>
 		<td>gimp-2.7.0.tar.bz2</td>
-		<td><kbd>[ insert checksum here]</kbd></td>
+		<td><kbd>bd9fb22079a547f1f302c219b1a29fcc</kbd></td>
 	</tr>
 	</table>
 	</p>
 
 	<p>A detailed list of changes in the development branch is available
-	at <a href="http://developer.gimp.org/NEWS">developer.gimp.org</a>.
+	in <a href="http://git.gnome.org/cgit/gimp/plain/NEWS">git</a>.
 	</p>
 
- -->
-	
 	<h1><a name="mirrors"></a>FTP and Web Mirrors</h1>
 	<!--#include virtual="/downloads/mirrors.xhtml" -->
   
