Bug 572949 - link to fink from mac downloads page?
Added a description of the Fink package repository and links.

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -18,13 +18,28 @@ install disk.
 
 <h3>Macports</h3>
 
-<p>Another easy way to install GIMP and other great <a
+<p>An easy way to compile and install GIMP and other great <a
 href="http://www.gnu.org/philosophy/free-sw.html">Free software</a> on your Mac
 is by using <a href="http://www.macports.org/">Macports</a>. The installer
-then allow you to choose from a large directory of packages. To install gimp
+allows you to choose from a large directory of packages. To install gimp
 using Macports, you simply do <code>sudo port install gimp</code> once you have
-Macports installed.
+Macports installed.</p>
 
 <ul>
-<li><a href="http://macports.org">Download Macports</a>.</li>
+  <li><a href="http://macports.org">Download Macports</a>.</li>
+</ul>
+
+<h3>Fink</h3>
+
+<p>Fink is a package repository that offer mostly precompiled
+  binaries. It provides the apt-get command known to e.g. Debian and
+  Ubuntu users, and installing GIMP is as easy as <code>sudo apt-get 
+    install gimp</code> once you have installed the <a
+    href="http://www.finkproject.org/download/index.php">Fink
+    installer</a>.<br/>
+  If there's no binary package, then <code>fink install gimp</code>
+  will compile GIMP from source.</p>
+
+<ul>
+<li><a href="http://www.finkproject.org">Download Fink</a>.</li>
 </ul>
