downloads: add gimp-2.7.1.tar.bz2

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -89,6 +89,10 @@
 		<td>gimp-2.7.0.tar.bz2</td>
 		<td><kbd>bd9fb22079a547f1f302c219b1a29fcc</kbd></td>
 	</tr>
+	<tr>
+		<td>gimp-2.7.1.tar.bz2</td>
+		<td><kbd>4932a0a1645ecd5b23ea6155ddda013d</kbd></td>
+	</tr>
 	</table>
 	</p>
 
