--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -5,7 +5,7 @@
 	compiled in order to be installed on your system.
 	</p>
 	
-	<p>GIMP 2.6.9 is now available
+	<p>GIMP 2.6.10 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.6/">ftp://ftp.gimp.org/pub/gimp/v2.6/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.6.html">Release
 	Notes for GIMP 2.6</a>.
@@ -57,6 +57,10 @@
 	<tr>
 		<td>gimp-2.6.9.tar.bz2</td>
 		<td><kbd>e5d0cc6f3ce127e51d7f3d3124b16a99</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.6.10.tar.bz2</td>
+		<td><kbd>b92710ad9f1b52fec98554d765473819</kbd></td>
 	</tr>
 	</table>
 	</p>
