Updated installer link for 2.6.11 and added user manual installers

--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -6,5 +6,28 @@ href="http://gimp-win.sourceforge.net/">Windows installers by Jernej
 Simončič</a>.</p>
 
 <ul>
-<li><a href="http://downloads.sourceforge.net/gimp-win/gimp-2.6.10-i686-setup-1.exe">Download GIMP 2.6.10</a> &ndash; Installer for Windows XP SP2 or later</li>
+<li><a href="http://downloads.sourceforge.net/gimp-win/gimp-2.6.11-i686-setup.exe">Download GIMP 2.6.11</a> &ndash; Installer for Windows XP SP2 or later</li>
+</ul>
+
+<h3>GIMP User Manual</h3>
+
+<p>Due to its size, the user manual is not included with the GIMP
+  installers and has been split into language-specific packages. <a 
+  href="http://gimp-win.sourceforge.net/stable.html">Installer
+  packages</a> are provided by Jernej Simončič:</p> 
+
+<ul>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-zh_CN-setup.exe/download">Chinese Simplified</a> (24.5 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-nl-setup.exe/download">Dutch</a> (24.5 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-en-setup.exe/download">English</a> (24.5 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-fr-setup.exe/download">French</a> (24.6 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-de-setup.exe/download">German</a> (28.5 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-it-setup.exe/download">Italian</a> (25.6 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-ja-setup.exe/download">Japanese</a> (20.9 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-ko-setup.exe/download">Korean</a> (24.0 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-nn-setup.exe/download">Norwegian Nynorsk</a> (26.4 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-pl-setup.exe/download">Polish</a> (24.5 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-ru-setup.exe/download">Russian</a> (24.9 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-es-setup.exe/download">Spanish</a> (25.4 MB)</li>
+  <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.6.0%20%28updated%20installer%29/gimp-help-2-2.6.0-sv-setup.exe/download">Swedish</a> (25.1 MB)</li>
 </ul>
