--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -12,7 +12,8 @@
 	</p>
 
 	<p>To allow you to check the integrity of the tarballs, here are the
-	MD5 sums of the latest releases:
+	MD5 sums of the latest releases:</p>
+
 	<table>
 	<tr>
 		<th>File</th>
@@ -67,7 +68,6 @@
 		<td><kbd>bb2939fe13e54fc7255cef5d097bb5dd</kbd></td>
 	</tr>
 	</table>
-	</p>
 
 	<p>GAP (the GIMP Animation Package) for GIMP 2.6 and above is available at
 	<a href="ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.6/gap">ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.6/gap</a>.
