--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -82,7 +82,7 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>GIMP 2.7.1 is a snapshot of current development towards GIMP 2.8. The
+	<p>GIMP 2.7.2 is a snapshot of current development towards GIMP 2.8. The
 	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.7/">ftp://ftp.gimp.org/pub/gimp/v2.7/</a>. Please make sure you read the <a href="/release-notes/gimp-2.7.html">Release Notes for GIMP 2.7</a>.
 	</p>
 
@@ -100,6 +100,10 @@
 	<tr>
 		<td>gimp-2.7.1.tar.bz2</td>
 		<td><kbd>4932a0a1645ecd5b23ea6155ddda013d</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.7.2.tar.bz2</td>
+		<td><kbd>e1ac334a144436f0f8e893851ec925e0</kbd></td>
 	</tr>
 	</table>
 	</p>
