--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -105,6 +105,10 @@
 		<td>gimp-2.7.2.tar.bz2</td>
 		<td><kbd>6996138ab70b0bfebfe9f563284e5f78</kbd></td>
 	</tr>
+	<tr>
+		<td>gimp-2.7.3.tar.bz2</td>
+		<td><kbd>851b55dc4af966e62ef5c8b679bcc623</kbd></td>
+	</tr>
 	</table>
 	</p>
 
