Bug 661798 - Linux vs. GNU/Linux
Say "GNU/Linux distribution" so rms is happy...

--- a/downloads/Linux.xhtml
+++ b/downloads/Linux.xhtml
@@ -1,9 +1,10 @@
 <!-- linux download instructions -->
 <h2>GIMP for Linux</h2>
 
-<p>It's very likely your Linux distribution already comes with a GIMP package.
-It is a preferred method of installing GIMP, as the distribution maintainers
-take care of all the dependencies and bug fix updates.</p>
+<p>It's very likely your GNU/Linux distribution already comes with a
+GIMP package. It is a preferred method of installing GIMP, as the
+distribution maintainers take care of all the dependencies and bug fix
+updates.</p>
 
 <h3>Ubuntu, Debian</h3>
 
