The Source code section now mentions which file contains instructions how to build GIMP from source code.

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -2,8 +2,9 @@
 
 	<p>GIMP releases available from gimp.org and its
 	<a href="#mirrors">mirrors</a> contain the source code and have to be
-	compiled in order to be installed on your system.
-	</p>
+	compiled in order to be installed on your system.</p>
+
+	<p>For instructions, how to build GIMP from source code, please refer to the INSTALL file located in the root directory of each archive.</p>
 	
 	<p>GIMP 2.6.11 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.6/">ftp://ftp.gimp.org/pub/gimp/v2.6/</a>.
