--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -110,6 +110,10 @@
 		<td>gimp-2.7.3.tar.bz2</td>
 		<td><kbd>851b55dc4af966e62ef5c8b679bcc623</kbd></td>
 	</tr>
+	<tr>
+		<td>gimp-2.7.4.tar.bz2</td>
+		<td><kbd>bda95a29c3483b8ff458b06b1543f867</kbd></td>
+	</tr>
 	</table>
 	</p>
 
