--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -68,6 +68,10 @@
 		<td>gimp-2.6.11.tar.bz2</td>
 		<td><kbd>bb2939fe13e54fc7255cef5d097bb5dd</kbd></td>
 	</tr>
+	<tr>
+		<td>gimp-2.6.12.tar.bz2</td>
+		<td><kbd>9f876ee63a0c4a4c83f50f32fb3bbe63</kbd></td>
+	</tr>
 	</table>
 
 	<p>GAP (the GIMP Animation Package) for GIMP 2.6 and above is available at
