--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -87,7 +87,7 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>GIMP 2.7.4 is a snapshot of current development towards GIMP 2.8. The
+	<p>GIMP 2.7.5 is a snapshot of current development towards GIMP 2.8. The
 	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.7/">ftp://ftp.gimp.org/pub/gimp/v2.7/</a>. Please make sure you read the <a href="/release-notes/gimp-2.7.html">Release Notes for GIMP 2.7</a>.
 	</p>
 
@@ -117,6 +117,10 @@
 	<tr>
 		<td>gimp-2.7.4.tar.bz2</td>
 		<td><kbd>bda95a29c3483b8ff458b06b1543f867</kbd></td>
+	</tr>
+	<tr>
+		<td>gimp-2.7.5.tar.bz2</td>
+		<td><kbd>55c3ce1402890665464d9aad74ea63b6</kbd></td>
 	</tr>
 	</table>
 	</p>
