downloads: Linux is GNU/Linux really

--- a/downloads/Linux.xhtml
+++ b/downloads/Linux.xhtml
@@ -1,5 +1,5 @@
 <!-- linux download instructions -->
-<h2>GIMP for Linux</h2>
+<h2>GIMP for GNU/Linux</h2>
 
 <p>It's very likely your GNU/Linux distribution already comes with a
 GIMP package. It is a preferred method of installing GIMP, as the
