downloads/Linux.xhtml: replaced "GNU/Linux" in the header with "Unix-like systems"

--- a/downloads/Linux.xhtml
+++ b/downloads/Linux.xhtml
@@ -1,8 +1,8 @@
 <!-- linux download instructions -->
-<h2>GIMP for GNU/Linux</h2>
+<h2>GIMP for Unix-like systems</h2>
 
-<p>It's very likely your GNU/Linux distribution already comes with a
-GIMP package. It is a preferred method of installing GIMP, as the
+<p>It's very likely your Unix-like system such as GNU/Linux distribution already 
+comes with a GIMP package. It is a preferred method of installing GIMP, as the
 distribution maintainers take care of all the dependencies and bug fix
 updates.</p>
 
@@ -22,3 +22,11 @@ running <code>yum install gimp</code>.</p>
 <h3>Mandriva</h3>
 <p>Mandriva Linux users can install the latest stable GIMP by running
 <code>urpmi gimp</code>.</p>
+
+<h3>BSD</h3>
+
+<p>GIMP is also available for *BSD family of systems such as FreeBSD and OpenBSD.</p>
+
+<h3>Solaris</h3>
+
+<p>GIMP can run on Solaris.</p>
