downloads/Linux.xhtml: fix articles and wrap paragraphs

--- a/downloads/Linux.xhtml
+++ b/downloads/Linux.xhtml
@@ -1,9 +1,9 @@
 <!-- linux download instructions -->
 <h2>GIMP for Unix-like systems</h2>
 
-<p>It's very likely your Unix-like system such as GNU/Linux distribution already 
-comes with a GIMP package. It is a preferred method of installing GIMP, as the
-distribution maintainers take care of all the dependencies and bug fix
+<p>It's very likely your Unix-like system such as a GNU/Linux distribution
+already comes with a GIMP package. It is a preferred method of installing GIMP,
+as the distribution maintainers take care of all the dependencies and bug fix
 updates.</p>
 
 <h3>Ubuntu, Debian</h3>
@@ -25,7 +25,8 @@ running <code>yum install gimp</code>.</p>
 
 <h3>BSD</h3>
 
-<p>GIMP is also available for *BSD family of systems such as FreeBSD and OpenBSD.</p>
+<p>GIMP is also available for the BSD family of systems such as FreeBSD and
+OpenBSD.</p>
 
 <h3>Solaris</h3>
 
