--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -87,8 +87,8 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>GIMP 2.7.5 is a snapshot of current development towards GIMP 2.8. The
-	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.7/">ftp://ftp.gimp.org/pub/gimp/v2.7/</a>. Please make sure you read the <a href="/release-notes/gimp-2.7.html">Release Notes for GIMP 2.7</a>.
+	<p>GIMP 2.8-rc1 is a snapshot of current development towards GIMP 2.8. The
+	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.8/">ftp://ftp.gimp.org/pub/gimp/v2.7/</a>. Please make sure you read the <a href="/release-notes/gimp-2.7.html">Release Notes for GIMP 2.8</a>.
 	</p>
 
 	<p>To allow you to check the integrity of the tarballs, here are the
@@ -122,8 +122,14 @@
 		<td>gimp-2.7.5.tar.bz2</td>
 		<td><kbd>55c3ce1402890665464d9aad74ea63b6</kbd></td>
 	</tr>
+	<tr>
+		<td>gimp-2.8.0-RC1.tar.bz2</td>
+		<td><kbd>134396e4399b7e753ffca7ba366c418f</kbd></td>
+	</tr>
 	</table>
 	</p>
+
+
 
 	<p>A detailed list of changes in the development branch is available
 	in <a href="http://git.gnome.org/cgit/gimp/plain/NEWS">git</a>.
