Initial switch to stable 2.8 release

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -1,4 +1,4 @@
-	<h2>Source for version 2.6 (Stable)</h2>
+	<h2>Source for version 2.8 (Stable)</h2>
 
 	<p>GIMP releases available from gimp.org and its
 	<a href="#mirrors">mirrors</a> contain the source code and have to be
@@ -6,10 +6,10 @@
 
 	<p>For instructions, how to build GIMP from source code, please refer to the INSTALL file located in the root directory of each archive.</p>
 	
-	<p>GIMP 2.6.12 is now available
-	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.6/">ftp://ftp.gimp.org/pub/gimp/v2.6/</a>.
-	You may want to read the <a href="/release-notes/gimp-2.6.html">Release
-	Notes for GIMP 2.6</a>.
+	<p>GIMP 2.8.0 is now available
+	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.8/">ftp://ftp.gimp.org/pub/gimp/v2.8/</a>.
+	You may want to read the <a href="/release-notes/gimp-2.8.html">Release
+	Notes for GIMP 2.8</a>.
 	</p>
 
 	<p>To allow you to check the integrity of the tarballs, here are the
@@ -21,62 +21,16 @@
 		<th>MD5 sum</th>
 	</tr>
 	<tr>
-		<td>gimp-2.6.0.tar.bz2</td>
-		<td><kbd>e5ac955fee8b376d431e4693027d7640</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.1.tar.bz2</td>
-		<td><kbd>2fa176d1da75575c88b01019d014744d</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.2.tar.bz2</td>
-		<td><kbd>3664d12f26447c0edc3f611987b9bf2d</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.3.tar.bz2</td>
-		<td><kbd>39c30867511b79391eb9177c86c8b79a</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.4.tar.bz2</td>
-		<td><kbd>4e8185e40ab06559ce6dd5ef61b3e83b</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.5.tar.bz2</td>
-		<td><kbd>cd13050bc6bde6d8d8fd38eff6276033</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.6.tar.bz2</td>
-		<td><kbd>23d880dd09cd62c936ed04666a53f8e4</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.7.tar.bz2</td>
-		<td><kbd>77ed86a8de9b48587efb24f2b115ad38</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.8.tar.bz2</td>
-		<td><kbd>a4d9462c9420954824a80c9b1963f9d9</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.9.tar.bz2</td>
-		<td><kbd>e5d0cc6f3ce127e51d7f3d3124b16a99</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.10.tar.bz2</td>
-		<td><kbd>b92710ad9f1b52fec98554d765473819</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.11.tar.bz2</td>
-		<td><kbd>bb2939fe13e54fc7255cef5d097bb5dd</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.6.12.tar.bz2</td>
-		<td><kbd>9f876ee63a0c4a4c83f50f32fb3bbe63</kbd></td>
+		<td>gimp-2.8.0.tar.bz2</td>
+		<td><kbd>md5</kbd></td>
 	</tr>
 	</table>
 
+	<!--
 	<p>GAP (the GIMP Animation Package) for GIMP 2.6 and above is available at
 	<a href="ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.6/gap">ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.6/gap</a>.
 	</p>
+	-->
 
 	<p>GIMP help files are available at
 	<a href="ftp://ftp.gimp.org/pub/gimp/help/">ftp://ftp.gimp.org/pub/gimp/help/</a>.
@@ -87,10 +41,12 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>GIMP 2.8-rc1 is a snapshot of current development towards GIMP 2.8. The
-	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.8/">ftp://ftp.gimp.org/pub/gimp/v2.7/</a>. Please make sure you read the <a href="/release-notes/gimp-2.7.html">Release Notes for GIMP 2.8</a>.
+	<p>GIMP 2.9.0 is a snapshot of current development towards GIMP 2.10. The
+	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.9/">ftp://ftp.gimp.org/pub/gimp/v2.9/</a>. Please make sure you read the <a href="/release-notes/gimp-2.9.html">Release Notes for GIMP 2.9</a>.
 	</p>
 
+	<p>Sorry, there are no releases of the 2.9 development version yet.</p>
+	<!--
 	<p>To allow you to check the integrity of the tarballs, here are the
 	MD5 sums of the latest releases:
 	<table>
@@ -99,35 +55,12 @@
 		<th>MD5 sum</th>
 	</tr>
 	<tr>
-		<td>gimp-2.7.0.tar.bz2</td>
-		<td><kbd>bd9fb22079a547f1f302c219b1a29fcc</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.7.1.tar.bz2</td>
-		<td><kbd>4932a0a1645ecd5b23ea6155ddda013d</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.7.2.tar.bz2</td>
-		<td><kbd>6996138ab70b0bfebfe9f563284e5f78</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.7.3.tar.bz2</td>
-		<td><kbd>851b55dc4af966e62ef5c8b679bcc623</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.7.4.tar.bz2</td>
-		<td><kbd>bda95a29c3483b8ff458b06b1543f867</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.7.5.tar.bz2</td>
-		<td><kbd>55c3ce1402890665464d9aad74ea63b6</kbd></td>
-	</tr>
-	<tr>
-		<td>gimp-2.8.0-RC1.tar.bz2</td>
-		<td><kbd>134396e4399b7e753ffca7ba366c418f</kbd></td>
+		<td>tarball</td>
+		<td><kbd>md5</kbd></td>
 	</tr>
 	</table>
 	</p>
+	-->
 
 
 
