downloads: add md5 of 2.8.0

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -22,7 +22,7 @@
 	</tr>
 	<tr>
 		<td>gimp-2.8.0.tar.bz2</td>
-		<td><kbd>md5</kbd></td>
+		<td><kbd>28997d14055f15db063eb92e1c8a7ebb</kbd></td>
 	</tr>
 	</table>
 
