Added an Ubuntu Software Centre link

--- a/downloads/Linux.xhtml
+++ b/downloads/Linux.xhtml
@@ -9,7 +9,7 @@ updates.</p>
 <h3>Ubuntu, Debian</h3>
 
 <p>Ubuntu or Debian users can simply run <code>apt-get install gimp</code> to
-get the latest stable release of GIMP.</p>
+get the latest stable release of GIMP. Ubuntu users can also install GIMP from <a href="https://apps.ubuntu.com/cat/applications/gimp/" target="_blank">Software Centre</a>.</p>
 
 <h3>openSUSE</h3>
 <p>SUSE users can install GIMP by running <code>yast -i gimp</code> or
