--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -6,7 +6,7 @@
 
 	<p>For instructions, how to build GIMP from source code, please refer to the INSTALL file located in the root directory of each archive.</p>
 	
-	<p>GIMP 2.8.0 is now available
+	<p>GIMP 2.8.2 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.8/">ftp://ftp.gimp.org/pub/gimp/v2.8/</a>.
 	You may want to read the <a href="/release-notes/gimp-2.8.html">Release
 	Notes for GIMP 2.8</a>.
@@ -19,6 +19,10 @@
 	<tr>
 		<th>File</th>
 		<th>MD5 sum</th>
+	</tr>
+	<tr>
+		<td>gimp-2.8.2.tar.bz2</td>
+		<td><kbd>b542138820ca3a41cbd63fc331907955</kbd></td>
 	</tr>
 	<tr>
 		<td>gimp-2.8.0.tar.bz2</td>
