--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -1,22 +1,18 @@
 <h2>GIMP for Mac OS X</h2>
 
 <p>
-The GIMP team doesn't provide official Mac binaries. You can, however,
-install GIMP 2.6 easily on the Mac using the packages provided by
-<a href="http://gimp.lisanet.de/">GIMP on OS X</a>.
+The GIMP team provides an official DMG installer. Just open the downloaded
+DMG and drag "GIMP.app" into your "Applications" folder.
 </p>
 
 <ul>
-<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.6</a> &ndash; Choose a package from the Downloads page</li>
+<li><a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.2-dmg-1.dmg">Download gimp-2.8.2-dmg-1.dmg</a>
 </ul>
 
-<p>
-Running GIMP on Mac OS X requires Apple's X11 environment. It is
-included on the <em>"Optional Installs"</em> package on the OS X
-install disk.
-</p>
-
 <h3>Macports</h3>
+
+<p>Disclaimer: we have not investigated if it is possible to build
+GIMP 2.8 from Macports</p>
 
 <p>An easy way to compile and install GIMP and other great <a
 href="http://www.gnu.org/philosophy/free-sw.html">Free software</a> on your Mac
@@ -30,6 +26,9 @@ Macports installed.</p>
 </ul>
 
 <h3>Fink</h3>
+
+<p>Disclaimer: we have not investigated if it is possible to build
+GIMP 2.8 from Fink</p>
 
 <p>Fink is a package repository that offer mostly precompiled
   binaries. It provides the apt-get command known to e.g. Debian and
