--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -1,12 +1,31 @@
 <h2>GIMP for Mac OS X</h2>
 
 <p>
-The GIMP team provides an official DMG installer. Just open the downloaded
+There are two ways to run GIMP on OSX: natively (running directly on top
+of OSX), and using X11 (requires Apple's X11 environment):
+</p>
+
+<h3>Native Build</h3>
+
+<p>
+This is a GIMP 2.8 DMG installer. Just open the downloaded
 DMG and drag "GIMP.app" into your "Applications" folder.
 </p>
 
 <ul>
 <li><a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.2-dmg-1.dmg">Download gimp-2.8.2-dmg-1.dmg</a>
+</ul>
+
+<h3>X11 Build</h3>
+
+<p>
+These packages install just as easily but require X11. Lisanet's
+builds include some more useful additional plug-ins. Get them
+from <a href="http://gimp.lisanet.de/">GIMP on OS X</a>.
+</p>
+ 
+<ul>
+<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.8</a
 </ul>
 
 <h3>Macports</h3>
