--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -25,7 +25,7 @@ from <a href="http://gimp.lisanet.de/">GIMP on OS X</a>.
 </p>
  
 <ul>
-<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.8</a
+<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.8</a>
 </ul>
 
 <h3>Macports</h3>
