Kill the outdated win/unix/osx pages and just point to the downloads page instead.

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -4,7 +4,7 @@
 	<a href="#mirrors">mirrors</a> contain the source code and have to be
 	compiled in order to be installed on your system.</p>
 
-	<p>For instructions, how to build GIMP from source code, please refer to the INSTALL file located in the root directory of each archive.</p>
+	<p>For instructions, how to build GIMP from source code, please see <a href="/source/">this page</a>.</p>
 	
 	<p>GIMP 2.8.2 is now available
 	at <a href="ftp://ftp.gimp.org/pub/gimp/v2.8/">ftp://ftp.gimp.org/pub/gimp/v2.8/</a>.
