Adjusted the Mac downloads page to reflect recent changes

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -1,27 +1,24 @@
 <h2>GIMP for Mac OS X</h2>
 
 <p>
-There are two ways to run GIMP on OSX: natively (running directly on top
-of OSX), and using X11 (requires Apple's X11 environment):
+Since the 2.8.2 version GIMP runs on OSX natively. No X11 environment is required.
 </p>
 
-<h3>Native Build</h3>
+<h3>Native builds</h3>
+
+<p>Currently we have two source of installers.</p>
 
 <p>
-This is a GIMP 2.8 DMG installer. Just open the downloaded
-DMG and drag "GIMP.app" into your "Applications" folder.
+A GIMP 2.8 DMG installer by Clayton Walker, stock GIMP build without any add-ons. 
+Just open the downloaded DMG and drag "GIMP.app" into your "Applications" folder.
 </p>
 
 <ul>
 <li><a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.2-dmg-2.dmg">Download gimp-2.8.2-dmg-2.dmg</a>
 </ul>
 
-<h3>X11 Build</h3>
-
 <p>
-These packages install just as easily but require X11. Lisanet's
-builds include some more useful additional plug-ins. Get them
-from <a href="http://gimp.lisanet.de/">GIMP on OS X</a>.
+	A build by <a href="http://gimp.lisanet.de/">Simone Karin Lehmann</a>, with some extra plug-ins.
 </p>
  
 <ul>
@@ -30,7 +27,7 @@ from <a href="http://gimp.lisanet.de/">GIMP on OS X</a>.
 
 <h3>Macports</h3>
 
-<p>Disclaimer: we have not investigated if it is possible to build
+<p>Disclaimer: we have not investigated if it's possible to build
 GIMP 2.8 from Macports</p>
 
 <p>An easy way to compile and install GIMP and other great <a
