--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -6,7 +6,7 @@ href="http://gimp-win.sourceforge.net/">Windows installers by Jernej
 Simončič</a>.</p>
 
 <ul>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20%2B%20GTK%2B%20%28stable%20release%29/GIMP%202.8.2/gimp-2.8.2-setup-1.exe/download">Download GIMP 2.8.2</a> &ndash; Installer for Windows XP SP3 or later</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20%2B%20GTK%2B%20%28stable%20release%29/GIMP%202.8.2/gimp-2.8.2-setup-1.exe/download" class="sourceforge_accelerator_link">Download GIMP 2.8.2</a> &ndash; Installer for Windows XP SP3 or later</li>
 </ul>
 
 <h3>GIMP User Manual</h3>
@@ -17,3 +17,12 @@ Simončič</a>.</p>
   packages</a> are provided by Jernej Simončič.
 </p>
 
+<script>
+(function() {
+  var script = document.createElement('script');
+  script.src = '//sourceforge.net/accelerator/js?partner_id=71';
+  script.defer = true;
+  var s = document.getElementsByTagName('script')[0];
+  s.parentNode.insertBefore(script, s);
+})();
+</script> 
